[package]
name = "backend"
version = "1.3.0"
authors = ["Julien Blatecky <julien.blatecky@creatiwity.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
custom_error = "1.8"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2", "serde_json", "uuidv07"] }
diesel_migrations = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
hex = "0.4"
r2d2 = "0.8"
rand = "0.8"
rust-embed = "5.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.9"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.12"
validator_derive = "0.12"
warp = { version = "0.3", default-features = false }

[dependencies.lettre]
version = "0.10.0-alpha.4"
default-features = false
features = ["builder", "smtp-transport", "rustls-tls", "r2d2", "hostname", "serde"]

[target.'cfg(any(unix, linux))'.dependencies]
openssl = "0.10"
