[package]
name = "backend"
version = "2.0.0"
authors = ["Julien Blatecky <julien.blatecky@creatiwity.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
clap = "3.0.0-beta"
custom_error = "1.9"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2", "serde_json", "uuidv07"] }
diesel_migrations = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
hex = "0.4"
postgis = "0.8"
postgis_diesel = "0.1"
r2d2 = "0.8"
rand = "0.8"
rust-embed = "5.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.8"
sha3 = "0.9"
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.13"
validator_derive = "0.13"
warp = { version = "0.3", default-features = false }

[dependencies.lettre]
version = "0.10.0-rc.2"
default-features = false
features = ["builder", "smtp-transport", "hostname", "tokio1-rustls-tls", "serde", "tracing"]

[target.'cfg(any(unix, linux))'.dependencies]
openssl = "0.10"
