[package]
name = "backend"
version = "2.0.0"
authors = ["Julien Blatecky <julien.blatecky@creatiwity.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.6", features = ["serde"] }
clap = { version = "3.1.14", features = ["derive", "env"] }
custom_error = "1.9"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2", "serde_json", "uuidv07"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
diesel_migrations = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
hex = "0.4"
postgis = "0.9"
postgis_diesel = "0.2"
r2d2 = "0.8"
rand = "0.8"
rust-embed = "6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.8"
sha3 = "0.10"
tokio = { version = "1.14", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.14"
validator_derive = "0.14"
warp = { version = "0.3", default-features = false }

[dependencies.lettre]
version = "0.10.0-rc"
default-features = false
features = ["builder", "smtp-transport", "hostname", "tokio1-rustls-tls", "serde", "tracing"]

[target.'cfg(any(unix, linux))'.dependencies]
openssl = "0.10"
